[gd_scene load_steps=10 format=3 uid="uid://dtth3mr2drpxa"]

[ext_resource type="Script" path="res://Hud/hud.gd" id="1_1hlij"]
[ext_resource type="Texture2D" uid="uid://dewuhsv6du4nj" path="res://Hud/Hud Elements/ProgressBarInside.png" id="1_rqbst"]
[ext_resource type="Texture2D" uid="uid://7tdir82mjygn" path="res://Hud/Hud Elements/ProgressBarOutside.png" id="2_622i0"]
[ext_resource type="Texture2D" uid="uid://dscvcni5sbn1y" path="res://Hud/Hud Elements/PauseIcon.png" id="2_r6xny"]
[ext_resource type="Texture2D" uid="uid://b637jy608jhjy" path="res://Hud/Hud Elements/PlayingIcon.png" id="3_t0kof"]
[ext_resource type="Texture2D" uid="uid://pktn0ownmn0j" path="res://Hud/Hud Elements/IconBackground.png" id="3_wtven"]
[ext_resource type="Texture2D" uid="uid://lcak46cmsgmg" path="res://Hud/Hud Elements/RewindingIcon.png" id="4_pmg16"]
[ext_resource type="Texture2D" uid="uid://c1qi1lgqw3wki" path="res://Hud/Hud Elements/RecordingIcon.png" id="5_xific"]
[ext_resource type="FontFile" uid="uid://d2yllhyspw1il" path="res://Fonts/audiowide/Audiowide-Regular.ttf" id="9_gltgi"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hlij")
iconPause = ExtResource("2_r6xny")
iconPlaying = ExtResource("3_t0kof")
iconRewind = ExtResource("4_pmg16")
iconRecording = ExtResource("5_xific")

[node name="Hud" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RecordedProgress" type="TextureProgressBar" parent="Hud"]
layout_mode = 0
offset_left = 400.0
offset_top = 19.0
offset_right = 1200.0
offset_bottom = 63.0
scale = Vector2(1, 0.269175)
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("1_rqbst")
texture_over = ExtResource("2_622i0")
texture_progress = ExtResource("1_rqbst")
tint_under = Color(0.278431, 0.192157, 0.172549, 1)
tint_over = Color(0.286275, 0.0509804, 0.172549, 1)
tint_progress = Color(0.619608, 0.372549, 0.101961, 1)

[node name="CurrentFrame" type="TextureProgressBar" parent="Hud"]
layout_mode = 0
offset_left = 400.0
offset_top = 28.0
offset_right = 1200.0
offset_bottom = 72.0
scale = Vector2(1, 0.109175)
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("1_rqbst")
texture_over = ExtResource("2_622i0")
texture_progress = ExtResource("1_rqbst")
tint_under = Color(0.145098, 0.0980392, 0.0392157, 1)
tint_over = Color(0, 0, 0, 1)

[node name="StateIcon" type="Control" parent="Hud"]
anchors_preset = 0
offset_left = 350.0
offset_top = 7.0
offset_right = 390.0
offset_bottom = 47.0

[node name="Background" type="TextureRect" parent="Hud/StateIcon"]
modulate = Color(1, 1, 1, 0.447059)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_wtven")

[node name="Icon" type="TextureRect" parent="Hud/StateIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Blink" type="Timer" parent="Hud/StateIcon"]
autostart = true

[node name="msg" type="Label" parent="."]
layout_mode = 0
offset_left = 1083.0
offset_top = 588.0
offset_right = 1593.0
offset_bottom = 611.0
theme_override_colors/font_color = Color(0.388235, 0.137255, 0.121569, 1)
theme_override_fonts/font = ExtResource("9_gltgi")

[node name="Show message" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Hud/StateIcon/Blink" to="." method="_on_blink_timeout"]
[connection signal="timeout" from="Show message" to="." method="_on_show_message_timeout"]
